# NVIDIA___TileGym

./: .pre-commit-config.yaml  README.md  README_chs.md  README_cht.md  README_fr.md  README_ja.md
.github/: .test_durations
.github/scripts/: check_skills_signatures.py
.github/workflows/: build-wheel.yml  tilegym-ci-infra-tests.yml  tilegym-ci.yml
modeling/transformers/: Dockerfile  pyproject.toml
src/tilegym/: __init__.py
src/tilegym/backend/: __init__.py  selector.py
src/tilegym/backend/cutile_rs/: __init__.py  autotuner.py  utils.py
src/tilegym/ops/: __init__.py  ops.py
src/tilegym/ops/cutile/: mla.py  moe_align_block.py  recurrent_gated_delta_rule.py
src/tilegym/ops/cutile_rs/: __init__.py  attention_sink.py  bmm.py  ffi_util.rs  matmul.py  silu_and_mul.py  swiglu.py
src/tilegym/ops/cutile_rs/attention_sink_kernel/: ffi.rs  kernel.rs
src/tilegym/ops/cutile_rs/bmm_kernel/: ffi.rs  kernel.rs
src/tilegym/ops/cutile_rs/cutile_kernels/: Cargo.toml
src/tilegym/ops/cutile_rs/cutile_kernels/src/: lib.rs
src/tilegym/ops/cutile_rs/matmul_kernel/: ffi.rs  kernel.rs
src/tilegym/ops/cutile_rs/silu_and_mul_kernel/: ffi.rs  kernel.rs
src/tilegym/ops/cutile_rs/swiglu_kernel/: ffi.rs  kernel.rs
src/tilegym/ops/triton/: __init__.py  layer_norm_legacy.py  rms_norm.py
src/tilegym/suites/flashinfer/cutile/: fmha_decode_bsr.py  fmha_prefill_bsr.py
src/tilegym/suites/liger/: __init__.py  ops.py
src/tilegym/suites/liger/cutile/: __init__.py  fused_neighborhood_attention.py  group_norm.py  kl_div.py  llama4_rope.py  multi_token_attention.py  qwen2vl_mrope.py  rope.py  sparsemax.py  tiled_mlp.py
tests/benchmark/: bench_layernorm.py  bench_rmsnorm.py  run_all_json.py
tests/ops/: test_attention_sink.py  test_bmm.py  test_chunk_gated_delta_rule.py  test_group_gemm.py  test_layer_norm_legacy.py  test_matmul.py  test_mla_decoding.py  test_mla_decoding_split_kv.py  test_recurrent_gated_delta_rule.py  test_rms_norm.py  test_silu_and_mul.py  test_swiglu.py
tests/suites/liger/: test_fused_neighborhood_attention.py  test_group_norm.py  test_kl_div.py  test_llama4_rope.py  test_multi_token_attention.py  test_qwen2vl_mrope.py  test_rope.py  test_tiled_mlp.py
